--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -33,12 +33,17 @@ Game:
   fitting the ghost.
 
 Gods:
-* Sif Muna's piety is no longer unfair to skilled species.
 * Zin no longer objects to deaths of non-sentient allies, and
   takes collateral kills of unclean and chaotic monsters.
 * Yredelemnul no longer gifts vampires.
+* Sif Muna's piety is no longer unfair to skilled species.
+* Nemelex no longer takes gold sacrifices.
 * Jiyva now paralyses fellow slimes under prayer instead of
   creating a jelly shield.
+
+Items:
+* Blowguns no longer show damage, as they do none; accordingly,
+  scrolls of enchant weapon II no longer work on them.
 
 Monsters:
 * Manes are now iron imps, with stat tweaks.
@@ -46,6 +51,7 @@ Monsters:
   imps resist poison but are vulnerable to fire.
 * (Very) ugly things are no longer amphibious.
 * Glyph change for demonic crawlers.
+* Orange demons' poison can now drain any stat.
 
 Spells:
 * Call Imp is buffed: it is now level 2, it takes spell power
