Add another 0.7 changelog entry.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -42,6 +42,7 @@ Gods:
   creating a jelly shield.
 
 Items:
+* Scrolls of holy word do more damage to susceptible monsters.
 * Blowguns no longer show damage, as they do none; accordingly,
   scrolls of enchant weapon II no longer work on them.
 
