--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -56,6 +56,7 @@ Items:
   scrolls of enchant weapon II no longer work on them.
 
 Monsters:
+* Anacondas are now amphibious.
 * Skeletal dragons are renamed to bone dragons.
 * Manes are now iron imps, with stat tweaks.
 * Imps lose see invisible while shadow imps gain it, and white
