--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -13,6 +13,7 @@ Unsorted:
 * Track the source of poison for death messages.
 * Remove Death Knights and Thieves.
 * Ghouls can no longer starve; they just rot faster.
+* New tiles monster list tab.
 
 Interface:
 * New starting menus, mouse-operable in tiles builds.
