--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -46,11 +46,11 @@ Gods:
 * Nemelex no longer takes gold sacrifices.
 * Fedhas can now evolve ballistomycetes into hyperactive
   ballistomycetes.
-* Jiyva now paralyses fellow slimes under prayer instead of
-  creating a jelly shield.
-* Jiyva's royal jelly effect now produces temporary friendly
-  slimes instead of permanent neutral ones.
-* Jiyva can now give the player unique slime-related mutations.
+* Jiyva now gives the player conservation and unique
+  slime-related mutations; paralyses fellow slimes under
+  prayer instead of creating a jelly shield; and produces
+  temporary friendly slimes instead of permanent neutral
+  ones via the royal jelly effect.
 
 Items:
 * Scrolls of holy word do more damage to susceptible monsters.
