--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -14,6 +14,7 @@ Unsorted:
 * Remove Death Knights and Thieves.
 * Ghouls can no longer starve; they just rot faster.
 * New tiles monster list tab.
+* Player body size is now described on the "A" screen.
 
 Interface:
 * New starting menus, mouse-operable in tiles builds.
@@ -39,23 +40,29 @@ Game:
 Gods:
 * Zin no longer objects to deaths of non-sentient allies, and
   takes collateral kills of unclean and chaotic monsters.
+* Zin's Recite has been adjusted to be less harsh.
 * Zin has a new power: Imprison.
 * Elyvilon's Divine Vigour scales better in terms of power.
 * Yredelemnul no longer gifts vampires.
+* Kikubaaqudgha no longer protects from torment if the torment
+  is from pain-branding a weapon.
 * Sif Muna's piety is no longer unfair to skilled species.
 * Nemelex no longer takes gold sacrifices.
 * Fedhas can now evolve ballistomycetes into hyperactive
   ballistomycetes.
 * Jiyva now gives the player conservation and unique
-  slime-related mutations; paralyses fellow slimes under
-  prayer instead of creating a jelly shield; and produces
-  temporary friendly slimes instead of permanent neutral
-  ones via the royal jelly effect.
+  slime-related mutations, and produces temporary friendly
+  slimes instead of permanent neutral ones via the royal
+  jelly effect.
 
 Items:
 * Scrolls of holy word do more damage to susceptible monsters.
 * Blowguns no longer show damage, as they do none; accordingly,
   scrolls of enchant weapon II no longer work on them.
+* The "Sniper" unrandart is now a crossbow instead of a hand
+  crossbow.
+* Flame and frost-branded darts no longer always mulch, and the
+  steel brand is properly applied for thrown weapons.
 
 Monsters:
 * Anacondas are now amphibious.
