--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -89,6 +89,7 @@ Spells:
   summons very ugly things only 33% of the time.
 * Invisibility no longer works on glowing monsters, as Corona
   doesn't either.
+* Extension is nerfed: it now only extends spells that you know.
 
 Technical:
 * LOS and areas recalculated on-demand.
