--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -17,6 +17,7 @@ Unsorted:
 * Ghouls can no longer starve; they just rot faster.
 * New tiles monster list tab.
 * Player body size is now described on the "A" screen.
+* Warpers now start with a few darts of dispersal.
 
 Interface:
 * New starting menus, mouse-operable in tiles builds.
