--- a/crawl-ref/docs/crawl.6
+++ b/crawl-ref/docs/crawl.6
@@ -9,14 +9,17 @@
 .Op Fl vscores Ar n
 .Op Fl tscores Ar n
 .Op Fl test
+.Op Fl sprint-map Ar map
+.Op Fl sprint
 .Op Fl species Ar species
+.Op Fl seed Ar num
+.Op Fl script Ar file
 .Op Fl scores Ar n
 .Op Fl scorefile Ar path
 .Op Fl rcdir Ar path
 .Op Fl rc Ar path
 .Op Fl plain
 .Op Fl name Ar name
-.Op Fl seed Ar num
 .Op Fl morgue Ar path
 .Op Fl macro Ar path
 .Op Fl help
@@ -26,7 +29,6 @@
 .Op Fl builddb
 .Op Fl background Ar background
 .Op Fl arena Op Qq Ar monsters Cm v Ar monsters Op Cm arena: Ns Ar map
-.Op Fl script Ar file
 .Sh DESCRIPTION
 .Nm
 is a fun game in the grand tradition of games like Rogue, Hack, and Moria. Your
